# nissa

./: .gitignore  .gitignore~  .travis.yml  GPATH  GRTAGS  GSYMS  GTAGS  Makefile  Makefile.am  Makefile.default  Makefile.in  ProjectHome.md  README  STATE  aclocal.m4  bootstrap  compile  compile.sh  config.status  configure  configure.ac  default.Makefile  nissa_conf.sh  prace_conf.sh  proto_nissa_conf.sh  setup.sh  tags
projects/: Makefile.am  Makefile.in
projects/bubbles/: bubbles_standalone.c  tm_disconnected.c  tm_disconnected.cpp
projects/cosmhol/: Makefile.am  Makefile.in  real_scalar.cpp
projects/cpn/: Makefile.am  Makefile.in  cpn.cpp
projects/eight_BK/: Makefile.am  Makefile.in  eight_BK.c  eight_BK.cpp  eight_BK_all_in_one.c  old_BK_all_in_one.c  smeared_BK_all_in_one.c  smeared_BK_all_in_one.cpp
projects/g/: Makefile.am  Makefile.in  g.c  g.cpp  g_fullrth.c  g_old.cpp
projects/generate_confs/: Makefile.am  Makefile.in  TODO  convert_input.cpp  driver.hpp  fix_bison.sh  generate.cpp  generate_quenched.cpp  generate_stag.cpp  heatbath.cpp  parser.ypp  redefine_yy.hpp  sample_input  test_parser.cpp  tokenizer.lpp
projects/ghat/: ghat_single_r.c
projects/hmc/: Makefile.am  hmc.cpp
projects/ib/: EU3_source.cpp  Makefile.am  Makefile.in  check_fftw.cpp  checks.cpp  conf.cpp  conf.hpp  contr.cpp  contr.hpp  disco.cpp  disco2.cpp  disco3.cpp  field_test.cpp  hit.hpp  ib.cpp  input_mes  mel.cpp  meslep.cpp  meslep.hpp  nucleons.cpp  pars.cpp  pars.hpp  parseInput.awk  parseInput.sh  pingu.cpp  prop.cpp  prop.hpp  semileptonic.cpp  testNewExpr.cpp  test_prop.cpp  test_quda.cpp  test_wip.cpp
projects/meson_2pts/: meson_2pts.c  meson_2pts_point_source.c  meson_2pts_reco.c
projects/nice/: Makefile.am  nASTy.hpp  nice.cpp
projects/nucleons/: Makefile.am  nucleons_smeared.c  nucleons_smeared.cpp
projects/reno_const/: Makefile.am  Makefile.in  RIMOM.c  RIMOM.cpp  compute.c  fourier.c
projects/semileptonic/: Makefile.am  Makefile.in  driver_corr.hpp  gevp.cpp  gevp_3pts.cpp  new_semileptonic.cpp  new_types.cpp  new_types.h  parse_corr.cpp  parse_corr.hpp  parse_corr.ypp  redefine_yy.hpp  semileptonic.c  semileptonic_smeared.c  semileptonic_smeared.cpp  semileptonic_smeared_2pts.c  semileptonic_smeared_2pts_point_source.c  semileptonic_smeared_2pts_point_source.cpp  semileptonic_smeared_allinmem.c  semileptonic_smeared_allinmem.cpp  semileptonic_smeared_point_source.c  semileptonic_smeared_point_source.cpp  test.cpp  test_bgq.cpp  test_cov.cpp  test_proj.cpp  tokenize_corr.cpp  tokenize_corr.lpp
projects/spectral_projectors/: Makefile.am  spectral_projectors.cpp  spectral_projectors_bkp.cpp
projects/static_potential/: Makefile.am  Makefile.in  compute_potential.c  compute_potential.cpp  static_potential.cpp
projects/x/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  config.h.in  config.hpp  config.hpp.in  config.hpp.in~  create_headers.sh  headers.h  nissa.c  nissa.cpp  nissa.h  nissa.hpp  stamp-h1
src/IO/: ILDG_File.cpp  ILDG_File.h  checksum.c  checksum.cpp  checksum.h  endianess.c  endianess.cpp  endianess.h  input.c  input.cpp  input.h  reader.c  reader.cpp  reader.h  writer.c  writer.cpp  writer.h
src/base/: DDalphaAMG_bridge.cpp  DDalphaAMG_bridge.hpp  Makefile.am  Makefile.in  bench.cpp  bench.h  bench.hpp  bgp_instructions.c  bgp_instructions.h  bgq_instructions.h  close.c  close.cpp  close.h  close.hpp  communicate.c  communicate.cpp  communicate.h  cuda.cpp  cuda.hpp  cuda_test.hpp  debug.c  debug.cpp  debug.h  debug.hpp  export_conf_to_external_lib.cpp  export_conf_to_external_lib.hpp  export_conf_to_external_solver.cpp  export_conf_to_external_solver.hpp  field.cpp  field.hpp  global.c  global_variables.cpp  global_variables.h  global_variables.hpp  grid.cpp  grid.hpp  init.c  init.cpp  init.h  init.hpp  (+44 more)
src/bgq/: Makefile.am  Makefile.in  Wilson_hopping_matrix_eo_or_oe_bgq.cpp  Wilson_hopping_matrix_eo_or_oe_bgq.hpp  Wilson_hopping_matrix_eo_or_oe_bgq_32_64.hpp  Wilson_hopping_matrix_lx_bgq.cpp  Wilson_hopping_matrix_lx_bgq.h  Wilson_hopping_matrix_lx_bgq.hpp  bgq.h  bgq_barrier.c  bgq_barrier.h  bgq_barrier.hpp  bgq_macros.h  bgq_macros.hpp  bgq_types.h  bgq_vars.cpp  bgq_vars.h  clover_term_bgq.hpp  geometry_bgq.cpp  geometry_bgq.h  hopping_matrix_bgq.cpp  hopping_matrix_bgq.h  intrinsic.h  intrinsic.hpp  spi.cpp  spi.h  spi.hpp  staggered_hopping_matrix_eo_or_oe_bgq.cpp  staggered_hopping_matrix_eo_or_oe_bgq.h  staggered_hopping_matrix_eo_or_oe_bgq.hpp  staggered_hopping_matrix_eo_or_oe_bgq_32_64.hpp
src/communicate/: Makefile.am  Makefile.in  allToAll.hpp  all_to_all.cpp  all_to_all.hpp  borders.cpp  borders.h  borders.hpp  buffered_borders.cpp  buffered_borders.h  communicate.cpp  communicate.h  communicate.hpp  edges.cpp  edges.h  edges.hpp  unbuffered_borders.cpp  unbuffered_borders.h  vborders.hpp
src/cuda/: Makefile.am  Makefile.in  cuda_wrappers.cu  cuda_wrappers.hpp  fields.cu  fields.hpp  global_variables.cu  global_variables.hpp  macros.hpp  new_types.cu  new_types.hpp  test.cu  test.h  test.hpp  wrappers.cu  wrappers.hpp
src/dirac_operators/: Makefile.am  Makefile.in  dirac_operator.c  dirac_operator_stD_portable.c  dirac_operator_tmDeoimpr_portable.c  dirac_operator_tmQ_left_bgp.c  dirac_operators.c  dirac_operators.cpp
src/eigenvalues/: Makefile.am  eigenvalues.cpp  eigenvalues.hpp  eigenvalues_all.hpp  eigenvalues_arpack.cpp  eigenvalues_arpack.hpp  eigenvalues_autarchic.cpp  eigenvalues_autarchic.hpp  eigenvalues_overlap.cpp  eigenvalues_overlap.hpp  eigenvalues_parpack.cpp  eigenvalues_parpack.hpp  eigenvalues_staggered.cpp  eigenvalues_staggered.hpp
src/expr/: Makefile.am  assignDispatcher.hpp  baseComp.hpp  bindComps.hpp  cWiseCombine.hpp  comp.hpp  compReduce.hpp  compRwCl.hpp  comps.hpp  compsLoop.hpp  compsMerger.hpp  conj.hpp  dagger.hpp  dirac.hpp  dynamicCompsProvider.hpp  dynamicTens.hpp  dynamicTensDeclaration.hpp  eoField.hpp  execSpace.hpp  (+29 more)
tools/: Gaussiansmear_test.cpp  Makefile.am  Makefile.in  ave.cpp  clusterize.c  clusterize.cpp  clusterize2.cpp  common_tools.cpp  err.cpp  pack.c
(+2385 files in other folders)
